# handshake-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: publishing.md
docs/superpowers/plans/: 2026-03-23-vnc-login-mode.md  2026-03-24-graphql-job-details.md  2026-03-24-help-and-ci.md
docs/superpowers/specs/: 2026-03-24-graphql-job-details-design.md  2026-03-24-help-and-ci-design.md  2026-03-24-setup-wizard-design.md
handshake_mcp_server/: __init__.py  __main__.py  authentication.py  browser_manager.py  cli_main.py  constants.py  dependencies.py  error_handler.py  sequential_tool_middleware.py  server.py  setup_wizard.py  vnc_login.py
handshake_mcp_server/core/: __init__.py  auth.py  browser.py  exceptions.py  utils.py
handshake_mcp_server/scraping/: __init__.py  extractor.py  fields.py  link_metadata.py
handshake_mcp_server/tools/: __init__.py  employer.py  event.py  job.py  student.py
tests/: conftest.py  test_cli_dispatch.py  test_extractor.py  test_fields.py  test_link_metadata.py  test_setup_wizard.py  test_vnc_login.py
